# imgforge

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
assets/platform-tools/: README.md
assets/platform-tools/macos/: NOTICE.txt  etc1tool  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs
assets/platform-tools/macos/lib64/: libc++.dylib
benches/: conversion_bench.rs
deploy/: Dockerfile  docker-compose.yml
docs/: remote-deploy.md
scripts/: Info.plist.template  QUICKSTART.txt  clang-cl-win.sh  package-gui.ps1  package-gui.sh  package.ps1  package.sh
scripts/win-cc/: clang-cl
src/: cli.rs  cli_loader.rs  job.rs  lib.rs  main.rs  process_util.rs
src/config/: app_config.rs  mod.rs  presets.rs  project_config.rs
src/core/: context.rs  error.rs  mod.rs  types.rs
src/data_extract/: error.rs  mod.rs
src/data_extract/domain/: comparison.rs  evaluation.rs  extraction_batch.rs  extraction_record.rs  imatest_module.rs  metric_value.rs  mod.rs  ocr_metadata.rs  parse_warning.rs  source_kind.rs  summary.rs  threshold.rs  unmapped.rs
src/data_extract/ocr/: mod.rs  preprocess.rs  tesseract.rs
src/data_extract/parser/: aliases.rs  csv_parser.rs  file_kind.rs  json_parser.rs  mod.rs  module_detector.rs  ocr_text_parser.rs  txt_parser.rs
src/data_extract/service/: compare_service.rs  export_service.rs  extract_service.rs  insight_service.rs  mod.rs  query_service.rs  scanner.rs  summary_service.rs  threshold_service.rs
src/data_extract/tests/: integration_tests.rs  mod.rs  v2_tests.rs
src/data_extract/ui/: data_extract_panel.rs  mod.rs
src/gui/: app.rs  app_types.rs  async_job.rs  fonts.rs  macos.rs  mod.rs  prefs.rs  quality_preview.rs  task_center.rs  theme.rs  widgets.rs
src/gui/app/: convert.rs  mod.rs
src/gui/native/: macos_glass.rs  mod.rs  stub.rs
src/io/: atomic_write.rs  batch_preview.rs  incremental.rs  mod.rs  paths.rs  reference_pick.rs  rename.rs  scanner.rs  thumbnails.rs
src/jira/: client.rs  config.rs  error.rs  load.rs  mapping.rs  mod.rs  service.rs
src/mobile/: adb.rs  adb_binary.rs  config.rs  fs_pull.rs  mod.rs
src/processing/: brightness_match.rs  camera_match.rs  image_quality.rs  mod.rs  pipeline.rs  quality_fit.rs
src/processing/backends/: avif_codec.rs  bayer_codec.rs  bayer_stub.rs  jxl_codec.rs  mod.rs  native_backend.rs  vips_backend.rs  webp_codec.rs
src/processing/steps/: adjust_step.rs  decode_step.rs  encode_step.rs  metadata_step.rs  mod.rs  reference_brightness_step.rs  resize_step.rs  watermark_step.rs
src/remote/: asset_cache.rs  cache.rs  catalog.rs  client.rs  config.rs  contract.rs  error.rs  events.rs  fetch.rs  http.rs  mod.rs  models.rs  module_bridge.rs  services.rs  task_sync.rs  types.rs  ui_adapter.rs  upload.rs  worker_policy.rs
src/review/: error.rs  mod.rs
src/review/domain/: annotation.rs  batch.rs  convert_params.rs  coords.rs  custom_status.rs  image_item.rs  metadata.rs  mod.rs  render.rs  tag.rs
src/review/service/: analysis_service.rs  batch_operations.rs  batch_service.rs  config.rs  conversion_bridge.rs  export_service.rs  image_loader.rs  mod.rs  review_service.rs  screenshot_service.rs  shortcuts.rs  thumbnail_service.rs
src/review/storage/: backup.rs  consistency.rs  migrate.rs  mod.rs  paths.rs  repository.rs  sqlite_mappers.rs  sqlite_repository.rs  traits.rs
src/review/ui/: canvas.rs  compare_view.rs  list_thumbnail_cache.rs  mod.rs  properties_panel.rs  review_panel.rs  review_panel_helpers.rs  review_panel_types.rs  roi_picker.rs  shortcut_panel.rs  shortcuts.rs  sidebar.rs  texture_cache.rs  toolbar.rs
src/review/ui/annotation_canvas/: coords.rs  draw.rs  events.rs  history.rs  mod.rs  types.rs
src/scheduler/: executor.rs  mod.rs  task.rs
src/server/: auth.rs  config.rs  mod.rs  rate_limit.rs  state.rs
src/server/api/: mod.rs  routes.rs
src/server/object_store/: mod.rs  s3.rs
src/server/queue/: mod.rs  redis_streams.rs
src/server/storage/: mod.rs  postgres.rs
src/server/worker/: mod.rs
src/ui/: doctor.rs  logger.rs  mod.rs  progress.rs  report.rs
src/video_review/: error.rs  mod.rs
src/video_review/domain/: batch.rs  defect.rs  marker.rs  metadata.rs  mod.rs  segment.rs  tag.rs  video_item.rs
src/video_review/service/: align_service.rs  analysis_service.rs  contact_sheet.rs  defect_package.rs  export_service.rs  ffmpeg_backend.rs  frame_cache.rs  grid_video.rs  mod.rs  screenshot_service.rs  video_service.rs
src/video_review/storage/: migrate.rs  mod.rs  paths.rs  repository.rs  sqlite_repository.rs
src/video_review/ui/: hover_preview.rs  mod.rs  multi_compare.rs  video_list.rs  video_review_panel.rs
tests/: conversion_pipeline.rs  remote_local_server_e2e.rs  remote_modules_e2e.rs
