[package]
name = "imgforge"
version = "0.1.6"
edition = "2021"
rust-version = "1.85"
description = "Cross-platform high-performance batch image format converter"
license = "MIT"
authors = ["imgforge contributors"]
readme = "README.md"

[lib]
name = "imgforge"
path = "src/lib.rs"

[[bin]]
name = "imgforge"
path = "src/main.rs"

[[bin]]
name = "imgforge-app"
path = "src/bin/imgforge-app.rs"
required-features = ["gui"]

[features]
default = []
gui = [
  "dep:eframe",
  "dep:egui",
  "dep:rfd",
  "dep:open",
  "incremental",
  "rename",
  "thumbnails",
  "watermark",
  "jpegxl",
]
incremental = ["dep:sha2"]
avif = ["dep:ravif"]
avif-decode = ["dep:avif-decode"]
jpegxl = ["dep:jxl-oxide", "dep:zune-jpegxl", "dep:zune-core"]
vips = ["dep:rs-vips"]
watermark = ["dep:ab_glyph"]
rename = []
thumbnails = []

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "bmp",
    "tiff",
    "gif",
] }
fast_image_resize = { version = "5", features = ["image"] }
jwalk = "0.8"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
eyre = "0.6"
color-eyre = "0.6"
kamadak-exif = "0.6"
num_cpus = "1"
sha2 = { version = "0.10", optional = true }
ravif = { version = "0.13", optional = true }
avif-decode = { version = "1.0", default-features = false, optional = true }
jxl-oxide = { version = "0.12", optional = true }
zune-jpegxl = { version = "0.5", optional = true }
zune-core = { version = "0.5", optional = true }
ab_glyph = { version = "0.2", optional = true }
rs-vips = { version = "0.7", optional = true }
bytes = "1"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
humantime = "2"
rgb = "0.8"
dunce = "1"
eframe = { version = "0.31", optional = true, default-features = true, features = ["default_fonts", "glow"] }
egui = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
open = { version = "5", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSArray",
  "NSGeometry",
  "NSString",
  "NSProcessInfo",
  "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSGlassEffectView",
  "NSResponder",
  "NSView",
  "NSButton",
  "NSButtonCell",
  "NSStackView",
  "NSUserInterfaceLayout",
  "NSControl",
  "NSCell",
  "NSColor",
] }
raw-window-handle = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
