[package]
name = "imgforge"
version = "0.1.15"
edition = "2021"
rust-version = "1.85"
description = "Cross-platform high-performance batch image format converter"
license = "MIT"
authors = ["imgforge contributors"]
readme = "README.md"

[lib]
name = "imgforge"
path = "src/lib.rs"

[[bin]]
name = "imgforge"
path = "src/main.rs"

[[bin]]
name = "imgforge-app"
path = "src/bin/imgforge-app.rs"
required-features = ["gui"]

[[bin]]
name = "imgforge-server"
path = "src/bin/imgforge-server.rs"
required-features = ["server"]

[features]
default = []
## 可选服务端：axum 控制面 + 远程栈（Postgres 元数据 / Redis Streams / S3-MinIO；未配置时回退 SQLite+磁盘+内存队列）。
server = [
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:uuid",
  "dep:tokio-stream",
  "dep:rusqlite",
  "dep:redis",
  "dep:postgres",
  "dep:hmac",
  "dep:sha1",
  "dep:hex",
  "dep:urlencoding",
]
gui = [
  "dep:eframe",
  "dep:egui",
  "dep:rfd",
  "dep:open",
  "review",
  "video-review",
  "data-extract",
  "incremental",
  "rename",
  "thumbnails",
  "watermark",
  "jpegxl",
  "bayer",
]
review = ["dep:rusqlite", "dep:imageproc", "dep:csv"]
video-review = ["review", "dep:csv", "dep:ab_glyph", "dep:imageproc", "dep:zip", "dep:rustfft"]
data-extract = ["dep:csv", "ocr"]
ocr = []
incremental = []
avif = ["dep:ravif"]
avif-decode = ["dep:avif-decode"]
jpegxl = ["dep:jxl-oxide", "dep:zune-jpegxl", "dep:zune-core"]
vips = ["dep:rs-vips"]
watermark = ["dep:ab_glyph"]
rename = []
thumbnails = []
rawloader = ["dep:rawloader"]
demosaic = ["dep:demosaic"]
bayer = ["dep:rawloader", "dep:demosaic"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "bmp",
    "tiff",
    "gif",
] }
fast_image_resize = { version = "5", features = ["image"] }
jwalk = "0.8"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
eyre = "0.6"
color-eyre = "0.6"
kamadak-exif = "0.6"
num_cpus = "1"
sha2 = "0.10"
ravif = { version = "0.13", optional = true }
avif-decode = { version = "1.0", default-features = false, optional = true }
jxl-oxide = { version = "0.12", optional = true }
zune-jpegxl = { version = "0.5", optional = true }
zune-core = { version = "0.5", optional = true }
ab_glyph = { version = "0.2", optional = true }
imageproc = { version = "0.25", optional = true }
rs-vips = { version = "0.7", optional = true }
bytes = "1"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
humantime = "2"
rgb = "0.8"
dunce = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
axum = { version = "0.8", optional = true, features = ["macros"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors", "trace"] }
uuid = { version = "1", optional = true, features = ["v4", "serde"] }
tokio-stream = { version = "0.1", optional = true }
redis = { version = "0.27", optional = true, features = ["streams"] }
postgres = { version = "0.19", optional = true }
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
urlencoding = { version = "2", optional = true }
eframe = { version = "0.31", optional = true, default-features = true, features = ["default_fonts", "glow"] }
egui = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
open = { version = "5", optional = true }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
csv = { version = "1.3", optional = true }
zip = { version = "2", optional = true }
rustfft = { version = "6", optional = true }
webp = "0.3"
rawloader = { version = "0.37", default-features = false, optional = true }
demosaic = { version = "0.3", default-features = false, features = ["std"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSArray",
  "NSGeometry",
  "NSString",
  "NSProcessInfo",
  "objc2-core-foundation",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSGlassEffectView",
  "NSResponder",
  "NSView",
  "NSButton",
  "NSButtonCell",
  "NSStackView",
  "NSUserInterfaceLayout",
  "NSControl",
  "NSCell",
  "NSColor",
] }
raw-window-handle = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full", "macros"] }

[[bench]]
name = "conversion_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
